Added hashing algorithm to JWT configuration. Added middleware for authentication
